--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "intersection-observer": "^0.11.0",
+    "just-debounce": "^1.0.0",
+    "just-debounce-it": "^1.1.0",
+    "just-extend": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.2"
+    "react-helmet": "^6.1.0",
+    "react-scripts": "3.4.2",
+    "wouter": "^2.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/just-extend": "^1.1.0"
   }
 }
